--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                     </div>
                 </nav>
            </div>
+
+           <div class="playlist-content>
+
         </main>
 
         <footer class="disclaimer-premium">
