--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div id="result-playlist">
                 <div class="playlist">
                     <h1 id="greeting">Boas vindas</h1>
-                    <h2 class="session">Navegar por todas as sessões</h2>
+                    <h2 class="session">Recomendações para hoje!</h2>
                 </div>
 
            <div class="offer_scroll-container">
