--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
            <div class="playlist-content">
             <div id="result-playlist">
                 <div class="playlist">
-                    <h1 id="greeting">Boas vindas</h1>
-                    <h2 class="session">Recomendações para hoje!</h2>
+                    <h1 id="greeting">Seja bem vindo!</h1>
+                    <h2 class="session">Navegue por todas as seções</h2>
                 </div>
 
            <div class="offer_scroll-container">
