--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                     </button>
                 </div>
             </section>
+            
+            <section class="section-podcast">
+                <div class="section-podcast-content">
+                    <span class="podcast-text">Que tal seguirmos um Podcast?</span>
+                    <span class="podcast-subtext">Não fique por fora de nenhum episódio </span>
+                    <button class="section-podcast-button">
+                        <span>Explore Podcast</span>
+                    </button>
+                </div>
+            </section>
 
             <div class="cookies">
                 <a href="">Cookies</a>
@@ -245,7 +255,6 @@
                 <button type="button">Inscreva-se grátis</button>
             </div>
         </footer>
-        <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
