--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </section>
 
             <div class="cookies">
-                <a href="">Cookies</a>
+                <a href="">cookies</a>
             </div>
 
             <div class="languages">
